# voice-utils

./: .cursorignore  .gitignore  Makefile  README.md  __init__.py  __main__.py  audio_processor.py  audio_recorder.py  input_handler.py  keyboard_controller.py  pyproject.toml  realtime_transcription.py  requirements.txt  test_keyboard_controller.py  transcription_service.py  utils.py  voice_app.py
.github/workflows/: setup-repository.yml
event_based/: app.py  events.py  input_handler.py  recording_signal_publisher.py  recording_workflow.py
experiments/: 07-voice.ipynb  hello_realtime.py  hello_transcribe_tts.py  hello_world_voice.py  keyboard_tester.py
tests/: __init__.py  pytest.ini
tests/event_based/: __init__.py  test_input_handler.py  test_recording_signal_publisher.py  test_recording_workflow.py
