[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-module"
version = "0.1.0"
description = "Voice module for real-time transcription and voice commands"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "websocket-client",
    "numpy",
    "sounddevice",
    "colorama",
    "pynput",
    "soundfile",
    "pydub",
    "pyperclip",
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.uv]
pip = { no-binary = [] }

[tool.hatch]
build.targets.wheel.packages = ["."]

[tool.hatch.envs.default]
dependencies = []
python = ">=3.12"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]

[project.scripts]
voice = "voice_app:main"
realtime = "realtime_transcription:main" 